import "mapreduce/yt/interface/protos/extension.proto";

package NBASS;

// If changed, please do
// ~/arcadia/contrib/tools/protoc/protoc --descriptor_set_out ~/arcadia/logfeller/configs/parsers/bass-skill-log.desc --proto_path ~/arcadia --proto_path ~/arcadia/contrib/libs/protobuf --include_imports -I. skill.proto

message TSkillDiagnosticInfo {
    optional string SkillId = 1                 [json_name = "skill_id", (NYT.column_name) = "SkillId"];
    optional string ClientId = 2                [json_name = "client_id", (NYT.column_name) = "ClientId"];
    optional string RequestId = 3               [json_name = "request_id", (NYT.column_name) = "RequestId"];
    optional string SessionId = 4               [json_name = "session_id", (NYT.column_name) = "SessionId"];
    optional string UserId = 5                  [json_name = "user_id", (NYT.column_name) = "UserId"];
    optional string Source = 6                  [json_name = "source", (NYT.column_name) = "Source"];
    optional string ErrorType = 7               [json_name = "error_type", (NYT.column_name) = "ErrorType"];
    optional string ErrorDetail = 8             [json_name = "error_detail", (NYT.column_name) = "ErrorDetail"];
    optional uint64 TimestampMcr = 9            [json_name = "timestamp_mcr", (NYT.column_name) = "TimestampMcr"];
    optional uint64 ZoraResponseTimeMcr = 10    [json_name = "zora_response_time_mcr", (NYT.column_name) = "ZoraResponseTimeMcr"];
    optional uint64 SkillResponseTimeMcr = 11   [json_name = "skill_response_time_mcr", (NYT.column_name) = "SkillResponseTimeMcr"];
    optional string ZoraRequestId = 12          [json_name = "zora_request_id", (NYT.column_name) = "ZoraRequestId"];
}
